# gax

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CFP.tab.gax  CFP.tab.gax.before  CHANGELOG.md  DESIGN.md  Hello_World.draft.gax  Heute_meistgelesen-_«Outback_Lodge»_am_Stadelhofen_19d0bed1cddbab6d.mail.gax  Makefile  README.md  REVIEW_PRODUCT.md  Signals_PC_Briefing.doc.gax  flake.nix  in_inbox.gax  pyproject.toml  pyrightconfig.json  spam.tsv
ADR/: 001-gsheet-sync.md  002-multipart-markdown-format.md  003-gdoc-sync.md  004-mail-sync.md  005-cli-structure-tab-operations.md  006-mail-draft-sync.md  007-calendar-sync.md  008-gmail-filters-labels-iac.md  009-mail-relabel.md  010-label-management.md  011-filter-management.md  012-unified-pull.md  013-emacs-mode.md  014-form-sync.md  015-unified-clone.md  016-resource-abstraction.md  017-google-contacts.md  018-calendar-date-ranges.md  019-clone-checkout-explode.md  020-mail-command-cleanup.md  021-cat-command.md  021-consistent-resource-operations.md  022-simplified-cli-model.md  023-markdown-conversion-testing.md  024-file-extensions.md  025-directory-only-collections.md  026-clone-file-checkout-directory.md  027-diff-based-push.md  028-drive-folder-sync.md  029-nested-tab-support.md  030-markdown-strategy.md  031-google-slides-support.md  031-task-sync.md
REVIEW/: ARCHITECTURE.md  IMPROVEMENTS.md  REFERENCE_DESIGN.md
gax/: __init__.py  auth.py  cli.py  cli_helper.py  cli_lib.py  contacts.py  diff_push.py  docs.py  draft.py  filter.py  form.py  frontmatter.py  gaxfile.py  gcal.py  gdoc.py  gdrive.py  gslides.py  (+10 more)
(+85 files in other folders)
