[project]
name = "gax"
version = "0.1.0"
description = "Google Access CLI - sync Google Sheets with local files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "gspread>=6.0",
    "google-auth-oauthlib>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
gax = "gax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
