[project]
name = "gax"
version = "0.1.0"
description = "Google Access CLI - sync Google Workspace with local files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "gspread>=6.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
gax = "gax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end integration tests (require auth, use real Google APIs)",
]
